Generate loenn_vanilla.yaml + Apply a bunch of IDE suggestions